Sun Dec 21 2003 Lachlan Andrew <lha@users.sourceforge.net>

    * htsearch/HtURLSeedScore.cc, htsearch/SplitMatches.cc:  Fix bug #863860
      Split patterns at "|".
      For SplitMatches, make "*" only match if all other patterns fail.

Sun Dec 14 2003 Lachlan Andrew <lha@users.sourceforge.net>

    * htdig/Server.cc:  Fix bug #851303.
      Allow indexing if robots.txt has an empty "disallow".

    * test/t_htdig, test/t_htsearch, test/htdocs/robots.txt:
      Tests for the above.

Sun Dec 14 2003 Lachlan Andrew <lha@users.sourceforge.net>

    * htdig/htdig.cc, test/t_factors: Warn if config file has obsolete fields.

Sun Dec 14 2003 Lachlan Andrew <lha@users.sourceforge.net>

    * htsearch/Display.cc:  Apply Gilles's patch for ellipses bug #844828.

Sun Dec 14 2003 Lachlan Andrew <lha@users.sourceforge.net>

    * test/{t_validwords,t_templates,t_fuzzy,t_factors}
    * test/{set_attr,synonym_dict,dummy.stems,dummy.affixes,bad_word_list}
    * test/conf/main-template test/htdocs/set1/{site2.html,site4.html}:
      Added four new tests to test suite.  Not included in "make check",
      but can be run explicitly by "make TESTS=t_... check".

Sun Dec 14 2003 Lachlan Andrew <lha@users.sourceforge.net>

    * htcommon/conf_lexer.{lxx,cxx}:
      Back out changes to try to accept files without EOL :(

Sat Dec 13 2003 Lachlan Andrew <lha@users.sourceforge.net>

    * htcommon/defaults.{cc,xml}, htdoc/{attrs,cf_byprog}.html:
      Fix "used by" for  max_excerpts,  and resulting hyperlinks.

Sat Nov 22 2003 Lachlan Andrew <lha@users.sourceforge.net>

    * htcommon/conf_lexer.{lxx,cxx}, htcommon/conf_parser.{yxx,cxx}:
      Partially address bug #823455.
      Don't complain if config file doesn't end in EOL.
      Should the grammar be fixed not to need EOL?
      Report errors to  stderr,  not  stdout,  as they confuse the web server.

Sun Nov 9 14:44:02 EST 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

    * Tagged release htdig-3-2-0b5
